--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilos.css">
 
+    <script src="main.js"></script>
 </head>
 <body>
 
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom">Pom</button>
+        <button onclick class="tecla tecla_pom">Pom</button>
         <button class="tecla tecla_clap">Clap</button>
         <button class="tecla tecla_tim">Tim</button>
 
@@ -34,8 +35,8 @@
         <button class="tecla tecla_tom">Tom</button>
     </section>
 
-    <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
     <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
+    <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
     <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
     <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
     <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
